--- a/bigHouses/templates/account_delete.html
+++ b/bigHouses/templates/account_delete.html
@@ -11,23 +11,35 @@
 <body>
     <!-- Link to / -->
     <header class="header">
-        <div class = "header-left">
+        <div class="header-left">
             <a href="/"> <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo"> </a>
-            <a href="/"><img src="{{ url_for('static', filename='images/insta.png') }}" alt="bigHouses"> </a> <h2>Big Houses</h2>
+            <h2>Big Houses</h2>
         </div>
 
         <!-- Include a link to /explore/ and /users/{logname}/. -->
-        <div class = "header-right">
-            <a href = "/explore/"> <h3>explore</h3></a>
-            <a href = "/users/{{ logname }}/"> <h3> {{ logname }} </h3></a>
+        <div class="header-right">
+            <a href="/explore/" class="nav-link">explore</a>
+            <a href="/users/{{ logname }}/" class="nav-link">{{ logname }}</a>
         </div>
     </header>
 
-    <h1>{{ logname }}</h1>
+    <main class="login-container">
+        <div class="login-card">
+            <div class="login-header">
+                <h1>Delete Account</h1>
+                <p>Are you sure you want to delete your account, {{ logname }}?</p>
+                <p class="warning-text">This action cannot be undone.</p>
+            </div>
+            
+            <form class="login-form" action="{{ url_for('accounts')}}?target=/accounts/create/" method="post" enctype="multipart/form-data">
+                <button type="submit" name="delete" value="confirm delete account" class="delete-btn">Confirm Delete Account</button>
+                <input type="hidden" name="operation" value="delete"/>
+            </form>
 
-    <form action="{{ url_for('accounts')}}?target=/accounts/create/" method="post" enctype="multipart/form-data">
-        <input type="submit" name="delete" value="confirm delete account"/>
-        <input type="hidden" name="operation" value="delete"/>
-    </form>
+            <div class="login-footer">
+                <p><a href="/users/{{ logname }}/" class="signup-link">Cancel and go back</a></p>
+            </div>
+        </div>
+    </main>
 
 </body>
