--- a/bigHouses/templates/account_login.html
+++ b/bigHouses/templates/account_login.html
@@ -13,7 +13,6 @@
     <header class="header">
         <div class="header-left">
             <a href="/"> <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo"> </a>
-            <a href="/"><img src="{{ url_for('static', filename='images/insta.png') }}" alt="bigHouses"> </a> 
             <h2>Big Houses</h2>
         </div>
 
@@ -34,7 +33,7 @@
             <form class="login-form" action="{{ url_for('accounts') }}?target=/" method="post" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="username">Username</label>
-                    <input type="text" id="username" name="username" placeholder="Enter your username" required/>
+                    <input type="text" id="username" name="username" placeholder="Enter your uniqname" required/>
                 </div>
                 
                 <div class="form-group">
