--- a/bigHouses/templates/account_password.html
+++ b/bigHouses/templates/account_password.html
@@ -8,27 +8,49 @@
 <body>
     <!-- Link to / -->
     <header class="header">
-        <div class = "header-left">
+        <div class="header-left">
             <a href="/"> <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo"> </a>
-            <a href="/"><img src="{{ url_for('static', filename='images/insta.png') }}" alt="bigHouses"> </a> <h2>Big Houses</h2>
+            <h2>Big Houses</h2>
         </div>
 
         <!-- Include a link to /explore/ and /users/{logname}/. -->
-        <div class = "header-right">
-            <a href = "/explore/"> <h3>explore</h3></a>
-            <a href = "/users/{{ logname }}/"> <h3> {{ logname }} </h3></a>
+        <div class="header-right">
+            <a href="/explore/" class="nav-link">explore</a>
+            <a href="/users/{{ logname }}/" class="nav-link">{{ logname }}</a>
         </div>
     </header>
 
+    <main class="login-container">
+        <div class="login-card">
+            <div class="login-header">
+                <h1>Change Password</h1>
+                <p>Update your password securely</p>
+            </div>
+            
+            <form class="login-form" action="{{ url_for('accounts')}}?target=/accounts/edit/" method="post" enctype="multipart/form-data">
+                <div class="form-group">
+                    <label for="password">Current Password</label>
+                    <input type="password" id="password" name="password" placeholder="Enter your current password" required/>
+                </div>
+                
+                <div class="form-group">
+                    <label for="new_password1">New Password</label>
+                    <input type="password" id="new_password1" name="new_password1" placeholder="Enter your new password" required/>
+                </div>
+                
+                <div class="form-group">
+                    <label for="new_password2">Confirm New Password</label>
+                    <input type="password" id="new_password2" name="new_password2" placeholder="Confirm your new password" required/>
+                </div>
+                
+                <button type="submit" name="update_password" value="submit" class="login-btn">Update Password</button>
+                <input type="hidden" name="operation" value="update_password"/>
+            </form>
 
-    <form action="{{ url_for('accounts')}}?target=/accounts/edit/" method="post" enctype="multipart/form-data">
-        <input type="password" name="password" required/>
-        <input type="password" name="new_password1" required/>
-        <input type="password" name="new_password2" required/>
-        <input type="submit" name="update_password" value="submit"/>
-        <input type="hidden" name="operation" value="update_password"/>
-    </form>
-
-    <a href="/accounts/edit/">Back to edit account</a>
+            <div class="login-footer">
+                <p><a href="/accounts/edit/" class="signup-link">Back to edit account</a></p>
+            </div>
+        </div>
+    </main>
 
 </body>
