--- a/bigHouses/templates/explore.html
+++ b/bigHouses/templates/explore.html
@@ -11,30 +11,42 @@
 <body>
     <!-- Link to / -->
     <header class="header">
-        <div class = "header-left">
+        <div class="header-left">
             <a href="/"> <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo"> </a>
-            <a href="/"><img src="{{ url_for('static', filename='images/insta.png') }}" alt="bigHouses"> </a> <h2>Big Houses</h2>
+            <h2>Big Houses</h2>
         </div>
 
         <!-- Include a link to /explore/ and /users/{logname}/. -->
-        <div class = "header-right">
-            <a href = "/explore/"> <h3>explore</h3></a>
-            <a href = "/users/{{ logname }}/"> <h3> {{ logname }} </h3></a>
+        <div class="header-right">
+            <a href="/explore/" class="nav-link active">explore</a>
+            <a href="/users/{{ logname }}/" class="nav-link">{{ logname }}</a>
         </div>
     </header>
 
-    <h1>Discover people</h1>
+    <main class="explore-container">
+        <div class="explore-header">
+            <h1>Discover People</h1>
+            <p>Find and connect with new roommates</p>
+        </div>
 
-    {% for user in not_following %}
-        <a href="/users/{{ user.username }}/"><h4>{{user.username}}</h4></a>
-        <img src = "/uploads/{{user.filename}}" alt="profile pic">
-
-        <form action="{{ url_for('accounts')}}?target=/explore/" method="post" enctype="multipart/form-data">
-            <input type="submit" name="follow" value="follow"/>
-            <input type="hidden" name="username" value="{{user.username}}"/>
-            <input type="hidden" name="operation" value="follow"/>
-        </form>
-    {% endfor %}
+        <div class="users-grid">
+            {% for user in all_users %}
+                <div class="user-card">
+                    <div class="user-card-header">
+                        <img src="{{ user.img_url }}" alt="{{user.name}} profile picture" class="user-avatar">
+                        <div class="user-info">
+                            <h3><a href="/users/{{ user.uniqname }}/">{{user.name}}</a></h3>
+                            <p class="username">@{{user.uniqname}}</p>
+                        </div>
+                    </div>
+                    
+                    <div class="user-actions">
+                        <a href="/users/{{ user.uniqname }}/" class="view-profile-btn">View Profile</a>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </main>
 
 </body>
 </html>
